@@ -1,3 +1,9 @@
+2008-03-05  Eitan Isaacson  <eitan@ascender.com>
+
+	* src/lib/accerciser/accessible_treeview.py: 
+	* plugindata/validate/basic.py: 
+	* plugins/interface_view.glade: Added translator comments.
+
 2008-02-28  Eitan Isaacson  <eitan@ascender.com>
 
 	* plugins/event_monitor.glade: Move the separator directly beneath 
